# modelview

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  array.cpp  array.h  camera.c  camera.h  compile  compile.bat  io.c  io.cpp  io.h  light_source_frag.glsl  main.c  main.cpp  material.cpp  material.h  material_frag.glsl  mesh_utils.cpp  mesh_utils.h  renderer.c  renderer.cpp  renderer.h  renderme.cpp  renderme.h  scene.c  scene.cpp  scene.h  setup.sh  shader.c  shader.h  skarr.c  skarr.h  string.cpp  string.h  texture_frag.glsl  types.h  (+3 more)
core/: array.cpp  array.h  assert.h  container.h  error.h  string.cpp  string.h  types.h  vec.cpp  vec.h
shaders/: debug_f.glsl  material_norm_light_f.glsl  texture_norm_light_f.glsl  vert_debug_v.glsl  vert_norm_tex_v.glsl  vert_tex_v.glsl
src/: CMakeLists.txt  camera.cpp  camera.h  io.cpp  io.h  load.cpp  load.h  main.cpp  material.cpp  material.h  mesh_utils.cpp  mesh_utils.h  renderer.cpp  renderer.h  renderme.cpp  renderme.h  scene.cpp  scene.h  shader.cpp  shader.h  wavefront.cpp  wavefront.h
src/core/: container.h  error.h  string.cpp  string.h  tuple.h  types.h  vec.cpp  vec.h
